[gd_scene load_steps=4 format=2]

[ext_resource path="res://Extra/Sprites/Ketchup Image.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Powerup/SpeedPowerup.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.5, 106 )

[node name="SpeedPowerup" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 2 )
shape = SubResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_SpeedPowerup_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
